FIX: overflowing in smaller screen

--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -259,7 +259,7 @@ header p {
 
     .timeline .milestone {
         width: 100%;
-        max-width: 300px;
+        max-width: 250px;
     }
 
     .footer-section h3 {
